tests/ui/from_source.stderr
error: Only one `source` field allowed per struct or struct variant (remember that `#[from]` implies `source`)
  --> $DIR/from_source.rs:11:5
   |
11 |     cause: io::Error,
   |     ^^^^^

error: Only one `#[from]` field allowed per struct or struct variant
  --> $DIR/from_source.rs:21:5
   |
21 |     cause: io::Error,
   |     ^^^^^

error: When deriving `From`, non-`#[from]` fields are not allowed
  --> $DIR/from_source.rs:26:5
   |
26 |     source: io::Error,
   |     ^^^^^^

error: When deriving `From`, non-`#[from]` fields are not allowed
  --> $DIR/from_source.rs:41:5
   |
41 |     msg: String,
   |     ^^^

error: Cannot derive `From` on enum when two variants have same type for source error
  --> $DIR/from_source.rs:50:19
   |
50 |     Tuple(#[from] io::Error),
   |                   ^^^^^^^^^

error: Cannot derive `From` on enum when two variants have same type for source error
  --> $DIR/from_source.rs:60:19
   |
60 |     Tuple(#[from] std::io::Error),
   |                   ^^^^^^^^^^^^^^

error[E0119]: conflicting implementations of trait `std::convert::From<std::io::Error>` for type `EnumDuplicateFromType3`:
  --> $DIR/from_source.rs:64:10
   |
64 | #[derive(Error, Debug)]
   |          ^^^^^
   |          |
   |          first implementation here
   |          conflicting implementation for `EnumDuplicateFromType3`
